[AOC 2025] Day 12: Christmas Tree Farm

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ disjoint = "0.8.0"
 bimap = "0.6.3"
 itertools = "0.14.0"
 microlp = "0.2.11"
+bit-set = "0.8.0"
+num-bigint = "0.4.6"
+num-traits = "0.2.19"
